Add irefer.io script

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -16,11 +16,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+
 </head>
 
 <body>
   <app-root></app-root>
   <script src="https://js.stripe.com/v2/"></script>
-</body>
+    <!-- irefer.io -->
+    <script src="https://api.irefer.io/W4qLd43a520c4b9207c9625298d4dd0b.js"></script>
+  </body>
 
 </html>
